--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button type="button"id="right" class="button" onclick="moveRight()">Right</button>
         <button type="button"id="up " class="button" onclick="moveUp()">Up</button>
         <button type="button"id="down" class="button" onclick="moveDown()">Down</button>
+        <button type="button" id="reset" class="button" onclick="reset()">Reset</button>
     </div>
     <script src="index.js"></script>
 </body>
