--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <button type="button"id="up " class="button" onclick="moveUp()">Up</button>
         <button type="button"id="down" class="button" onclick="moveDown()">Down</button>
         <button type="button" id="reset" class="button" onclick="reset()">Reset</button>
+        <button type="button" id="large" class="button" onclick="increaseSize()">Enlarge</button>
+        <button type="button" id="small" class="button" onclick="decreaseSize()">Shrink</button>
     </div>
     <script src="index.js"></script>
 </body>
