add radio buttons two change the border radius of rectangle

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <button type="button" id="reset" class="button" onclick="reset()">Reset</button>
         <button type="button" id="large" class="button" onclick="increaseSize()">Enlarge</button>
         <button type="button" id="small" class="button" onclick="decreaseSize()">Shrink</button>
+        <input type="radio" class="button" name="border-width" value="1">1px
+        <input type="radio" class="button" name="border-width" value="3">3px
+        <input type="radio" class="button" name="border-width" value="4">4px
+        <input type="radio" class="button" name="border-width" value="5">5px
     </div>
     <script src="index.js"></script>
 </body>
